syntax = "proto3";
package Jubo.JuLiao.IM.Wx.Proto; //命名空间约定

import "TransportMessage.proto";
message GetWeChatsReqMessage {
      int64 UnionId = 1; // 账号
      EnumAccountType AccountType = 2; // 账号类型
      }