syntax = "proto3";
package Jubo.JuLiao.IM.Wx.Proto; //命名空间约定

message TriggerConversationPushTaskMessage {
    string WeChatId = 1; // 商家所属微信号
    int64 StartTime = 2; // 大于StartTime
    int64 EndTime = 3; // 小于EndTime，0为当前时间
    bool WithName = 4; // 返回会话的名称和头像
    int64 TaskId = 5;
    int32 Limit = 6; //返回会话数量 缺省 5000
    int32 Offset = 7; //开始位置
}