syntax = "proto3";
package Im.Scrm.Ww.Proto; //命名空间约定
import "WTransport.proto";

message CustomerPushNoticeMessage {
    int64 WxId = 1; // 设备企业WX号
    repeated CustomerMessage Contacts = 2; // 好友信息模型 多个
    int32 Size = 3;
    int32 Count = 4;
    int32 Page = 5;
    int64 TaskId = 6;
}

message CustomerMessage {
    int64 RemoteId = 1; //唯一id （RemoteId>>48==20 App; RemoteId>>48==28 微信用户; RemoteId>>48==33,34 外部客户； RemoteId>>48==39 群机器人； RemoteId>>48==30 内部客服； RemoteId>>48==32 VIP客户；）
    string Name = 2;
    string Alias = 3;
    string Avatar = 4;
    string Mobile = 5;
    string UnionId = 6; // 微信UnionId，可能为空
    EnumGender Gender = 7;
    int64 CorpId = 8;
    int32 AddTime = 9;
    int32 Source = 10; // 添加来源
    repeated int64 LabelIds = 11; //设置的用户标签
    string Suffix = 12; // 后缀
    string OpenId = 13;
    int64 SourceUser = 14;
    int64 SourceRoomId = 15;
    string SourceFriend = 16; //来自微信好友（wxid）来自通讯录（电话号码）
    string ApplyContent = 17;
    string Remark = 18;
    string CompanyRemark = 19;
    repeated string PhoneRemark = 20;
    string Desc = 21;
    string DescUrl = 22;
    int64 Attr = 23;
    int64 Attr2 = 24; 
    int64 Attr3 = 25;
    int64 ApplyTime = 26;
}
