syntax = "proto3";
package Im.Scrm.Ww.Proto; //命名空间约定

message DownloadFileByUrlTaskMessage {
    int64 WxId = 1; //
    string Url = 2; // url或FileId
    string AesKey = 3; //
    string AuthKey = 4; // 微信CDN AuthKey
    string FileName = 5; // 文件名（一般文件消息才有）
    int32 MsgType = 6; // 消息类型
    int32 FileType = 7; // 下载文件的类型 0 原始文件（原图，视频，音频，文件） 1 大图， 2 缩率图（预览图）
    int64 TaskId = 8;
    bool ReSend = 9; // 重新上传文件
}